; ModuleID = '/home/carl/AnghaBench/libgit2/tests/blame/extr_simple.c_test_blame_simple__can_blame_huge_file.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/blame/extr_simple.c_test_blame_simple__can_blame_huge_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_BLAME_OPTIONS_INIT = common dso_local global i32 0, align 4
@g_repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"blametest.git\00", align 1
@g_blame = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [9 x i8] c"huge.txt\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"4eecfea\00", align 1
@.str.3 = private unnamed_addr constant [8 x i8] c"6653ff4\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_blame_simple__can_blame_huge_file() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @GIT_BLAME_OPTIONS_INIT, align 4
  store i32 %2, i32* %1, align 4
  %3 = call i32 @cl_fixture(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  %4 = call i32 @git_repository_open(i32* @g_repo, i32 %3)
  %5 = call i32 @cl_git_pass(i32 %4)
  %6 = load i32, i32* @g_repo, align 4
  %7 = call i32 @git_blame_file(i32* @g_blame, i32 %6, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32* %1)
  %8 = call i32 @cl_git_pass(i32 %7)
  %9 = load i32, i32* @g_blame, align 4
  %10 = call i32 @git_blame_get_hunk_count(i32 %9)
  %11 = call i32 @cl_assert_equal_i(i32 2, i32 %10)
  %12 = load i32, i32* @g_repo, align 4
  %13 = load i32, i32* @g_blame, align 4
  %14 = call i32 @check_blame_hunk_index(i32 %12, i32 %13, i32 0, i32 1, i32 65536, i32 0, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  %15 = load i32, i32* @g_repo, align 4
  %16 = load i32, i32* @g_blame, align 4
  %17 = call i32 @check_blame_hunk_index(i32 %15, i32 %16, i32 1, i32 65537, i32 1, i32 0, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_open(i32*, i32) #1

declare dso_local i32 @cl_fixture(i8*) #1

declare dso_local i32 @git_blame_file(i32*, i32, i8*, i32*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_blame_get_hunk_count(i32) #1

declare dso_local i32 @check_blame_hunk_index(i32, i32, i32, i32, i32, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
